# basic-cmake

./: CMakeLists.txt  README.md  conanfile.txt  package.cmake  update_package
include/: optional.hpp  overload.hpp  schema.hpp
include/schema_serializers/: json_serializer.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  json_serializer_test.cpp
